yaml-tests/src/test/resources/transaction-setup/shouldFail/transaction-setup-after-tests.yamsql
#
# transaction-setup-after-tests.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2021-2025 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This test should fail
# The map of potential references is created at parse time, so they will exist for all
# the documents in the file, so enforce putting it before actual execution
---
schema_template:
    create table table_t1(id bigint, col1 bigint, primary key(id))
---
test_block:
  name: transactions-tests-before-setup
  tests:
    -
      - query: select * from table_t1 where id > 10;
      - result: []
---
transaction_setups:
    t1_less_than_50: create temporary function t1() on commit drop function AS
                     SELECT * FROM table_t1 where id < 50;
    t1_greater_than_10: create temporary function t2() on commit drop function AS
                        SELECT * FROM t1 where id > 10;
---
test_block:
  name: transactions-tests
  tests:
    -
      - query: select * from t1 where id > 10;
      - setupReference: t1_less_than_50
      - setupReference: t1_greater_than_10
      - result: [{id: 30, col1: 40}]
...
